<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">pmm_proyecto_alexbataller</string>
    <string name="my_account">My Account</string>
    <string name="correo">Email</string>
    <string name="ha_olvidado_la_contrase_a">¿Forgot password?</string>
    <string name="contrase_a">Password</string>
    <string name="entrar">Send</string>
    <string name="prueba_1234">Try 1234!!</string>
    <string name="email_error">Wrong Email</string>
    <string name="passwd_error">Wrong Password</string>
    <string name="contactos">Contacts</string>
    <string name="nuevo">new</string>
    <string name="todav_a_no_existe_ning_n_robot_en_el_sistema">There are no contacts</string>
    <string name="nombre_persona">Name</string>
    <string name="apellido">apellido</string>
    <string name="_2000">2000</string>
    <string name="nuevo_contacto">New Contact</string>
    <string name="nombre">Name:</string>
    <string name="material2">Material:</string>
    <string name="a_o">Year:</string>
    <string name="tipo">Type:</string>
    <string name="crear_contacto">CREATE CONTACT</string>
    <string name="editar_contacto">EDIT CONTACT</string>
    <string name="nuevo_contacto_snack">NEW CONTACT</string>
    <string name="deshacer_snack">UNDO</string>
    <string name="eliminar">Delete</string>
    <string name="editar">Edit</string>
    <string name="username">Username</string>
    <string name="mujer">Man</string>
    <string name="hombre">Woman</string>
    <string name="guardar">Save</string>
    <string name="ok">Ok</string>
    <string name="contactos_info">The app needs permission to read your contacts</string>
    <string name="sol_permiso">Permissions</string>
    <string name="id">ID:</string>
    <string name="phone">Phone:</string>
    <string name="telefono">phone</string>
    <string name="ies_lluis_simarro">IES LLUIS SIMARRO</string>
    <string name="alex_bataller_ortega">Alex Bataller Ortega</string>
    <string name="alexbo9_hotmail_com">alexbo9@hotmail.com</string>
    <string name="_652xxxxxx">652XXXXXX</string>
    <string name="github">github.com/AlexBO9</string>
    <string name="url_youtube">https://youtube.com</string>
    <string name="url_insta">https://instagram.com</string>
    <string name="url_twitter">https://twitter.com</string>
    <string name="url_google">http://google.com</string>
</resources>