<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    tools:context=".AcercaDe">

    <TableRow
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:padding="@dimen/margin"
        android:gravity="center">

        <TextView
            style="@style/textGran"
            android:layout_column="1"
            android:layout_span="4"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ies_lluis_simarro" />

    </TableRow>

    <TableRow
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        >

        <ImageView android:src="@drawable/ic_info_black_24dp"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/textMitja"
            android:layout_span="2"
            android:layout_column="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alex_bataller_ortega" />

    </TableRow>

    <TableRow
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin"
        android:layout_marginTop="@dimen/margin">

        <ImageView android:src="@drawable/phoneico"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/textMitja"
            android:layout_width="wrap_content"
            android:layout_span="2"
            android:layout_column="2"
            android:layout_height="wrap_content"
            android:text="@string/_652xxxxxx" />

    </TableRow>

    <TableRow
        android:id="@+id/row4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin"
        android:layout_marginTop="@dimen/margin">

        <ImageView android:src="@drawable/emailico"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/textMitja"
            android:layout_column="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:text="@string/alexbo9_hotmail_com" />

    </TableRow>

    <TableRow
        android:id="@+id/row5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin"
        android:layout_marginTop="@dimen/margin">

        <ImageView android:src="@drawable/link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"/>

        <TextView
            style="@style/textMitja"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_height="wrap_content"
            android:text="@string/github" />

    </TableRow>

    <TableRow
        android:id="@+id/row6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_weight="2"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/twitter"
            android:src="@drawable/twitterlogo"
            android:layout_column="1"
            android:layout_width="@dimen/margin"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/insta"
            android:src="@drawable/instagram"
            android:layout_column="2"
            android:layout_width="@dimen/margin"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/youtube"
            android:src="@drawable/youtube"
            android:layout_width="@dimen/margin"
            android:layout_column="3"
            android:layout_height="wrap_content"/>

    </TableRow>


</TableLayout>